--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Протези</title>
-    <link rel="stylesheet" type="text/css" href="45style.css">
-    <link rel="icon" href="iconka.ico" type="image/x-icon">
+    <title>На кристаликс</title>
 </head>
 
 <body>
-  <p><img src="1.jpg" alt="Письма мастера дзен"></p>
+  <p><img src="1594909484_thaumcraft.png.jpg" alt="Письма мастера дзен"></p>
 </body>
 
 </html>
