--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <p><img src="1594909484_thaumcraft.png.jpg" alt="Письма мастера дзен"></p>
+  <p><img src="1594909484_thaumcraft.png" alt="Письма мастера дзен"></p>
 </body>
 
 </html>
