--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
   <p><img src="1594909484_thaumcraft.png" alt="Письма мастера дзен"></p>
+  <p><img src="0-02-05-72299cf192d0e21eec8645461dcd391d133c9e6b4fd818f0329413b8f41545c6_ea5f9f65fef8744.png" alt="Письма мастера дзен"></p>
   <p><img src="untitled_zd2ts4l-audiotrimmer_7vAtKUf.mp3" alt="Письма мастера дзен"></p>
    
 </body>
